<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        app:title="Java Editor"
        app:subtitle="©Mouli Dutta"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_user_codes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:padding="2dp"
        app:elevation="6dp"
        android:layout_below="@id/main_activity_toolbar"/>

    <ImageView
        android:id="@+id/empty_code_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.2"
        android:contentDescription="@string/no_code"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/empty_code_image"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:alpha="0.3"
        android:text="@string/click_on_the_icon_to_add_a_new_code"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="25dp"
        android:contentDescription="@string/add_new"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/purple_200"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal" />

</RelativeLayout>